--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "normalize.css": "^8.0.1",
+    "view-design": "^4.1.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
