--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "html2canvas": "^1.0.0-rc.5",
+    "jquery": "^3.5.0",
     "normalize.css": "^8.0.1",
     "view-design": "^4.1.3",
     "vue": "^2.6.11",
