--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "copy": "^0.3.2",
     "core-js": "^3.6.4",
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.5.0",
@@ -34,6 +33,7 @@
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^4.2.1",
     "vue-template-compiler": "^2.6.11",
-    "walkdir": "^0.4.1"
+    "walkdir": "^0.4.1",
+    "copy": "^0.3.2"
   }
 }
